Fixed collapse at medium.

--- a/public/scss/components/_navbar.scss
+++ b/public/scss/components/_navbar.scss
@@ -185,7 +185,7 @@ Styleguide: navbar
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $grid-float-breakpoint) {
     .navbar-nav > li > a {
         padding: 30px 18px;
     }
@@ -238,7 +238,7 @@ Styleguide: navbar
     visibility: hidden;
     opacity: 0;
 
-    @media (min-width: $screen-sm-min) {
+    @media (min-width: $grid-float-breakpoint) {
         display: block;
     }
 
@@ -298,7 +298,7 @@ Styleguide: navbar
         display: block;
     }
 
-    @media (min-width: $screen-sm-min) {
+    @media (min-width: $grid-float-breakpoint) {
         li.dropdown.dropdown-hover.default:not(:hover) > .dropdown-menu {
             visibility: hidden;
             opacity: 0;
@@ -317,5 +317,12 @@ Styleguide: navbar
             display: block;
             position: absolute;
         }
+
+    }
+}
+
+@media (max-width: $grid-float-breakpoint - 1px) {
+    .navbar-collapse {
+        clear: both;
     }
 }
